[gd_scene load_steps=14 format=2]

[ext_resource path="res://bullet.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]
[ext_resource path="res://explosion.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.970226, 6.69126 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="Bullet" type="Node2D"]

[node name="Bullet" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Bullet"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource( 1 )

[node name="BulletTime" type="Timer" parent="Bullet"]
wait_time = 2.0
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bullet"]
visible = false
frames = SubResource( 10 )
animation = "explode"
[connection signal="area_entered" from="Bullet" to="Bullet" method="_on_Bullet_area_entered"]
[connection signal="timeout" from="Bullet/BulletTime" to="Bullet" method="_on_BulletTime_timeout"]
[connection signal="animation_finished" from="Bullet/AnimatedSprite" to="Bullet" method="_on_AnimatedSprite_animation_finished"]
